src/objects/SalesChannelBean__mdt.object
<CustomObject>
    <fields>
        <fullName>CommissionId__c</fullName>
        <label>CommissionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigTagId__c</fullName>
        <label>ConfigTagId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateActive__c</fullName>
        <label>DateActive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateInactive__c</fullName>
        <label>DateInactive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerPin__c</fullName>
        <label>DealerPin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayValue__c</fullName>
        <label>DisplayValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <label>IsInternal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumThreshold__c</fullName>
        <label>NumThreshold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentSalesChannelId__c</fullName>
        <label>ParentSalesChannelId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesChannelId__c</fullName>
        <label>SalesChannelId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScAddress1__c</fullName>
        <label>ScAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScAddress2__c</fullName>
        <label>ScAddress2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScAddress3__c</fullName>
        <label>ScAddress3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCity__c</fullName>
        <label>ScCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScContactFname__c</fullName>
        <label>ScContactFname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScContactLname__c</fullName>
        <label>ScContactLname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScContactMinit__c</fullName>
        <label>ScContactMinit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScContactNameGen__c</fullName>
        <label>ScContactNameGen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScContactNamePre__c</fullName>
        <label>ScContactNamePre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCountryCode__c</fullName>
        <label>ScCountryCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScName__c</fullName>
        <label>ScName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScNumber__c</fullName>
        <label>ScNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScPhone__c</fullName>
        <label>ScPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScState__c</fullName>
        <label>ScState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScZipCode__c</fullName>
        <label>ScZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityWord__c</fullName>
        <label>SecurityWord</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDisplay__c</fullName>
        <label>ShortDisplay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SalesChannelBean</label>
    <pluralLabel>SalesChannelBean</pluralLabel>
</CustomObject>